--- a/_posts/2016-04-07-Thursday-Links.html
+++ b/_posts/2016-04-07-Thursday-Links.html
@@ -9,10 +9,10 @@ ON: <2016-04-07 Thu>
 <a href="http://www.theguardian.com/society/2016/apr/07/the-sugar-conspiracy-robert-lustig-john-yudkin">The Sugar Conspiracy</a>, a good longread from The Guardian, on how low-fat diets
 became the medical establishment's dietary fad of choice from Ike Eisenhower's time
 until now. The original research was biased in the way that Ben Goldacre (among others)
-has taught us to watch out or. 
+has taught us to watch out or.<br>
 It's shocking how loathe even current experts are - scientists
 at Yale and Harvard, no less! - to fully change their minds, and the amount of hatred
 they heap on one of the journalists in the area. The aristocratic disdain is 
-very Downton Abbey.
+very Downton Abbey. <br>
 As always, the real take away is how hard it is to change anyone's mind, including
 our own.</p>
