--- a/_posts/2016-04-07-Thursday-Links.html
+++ b/_posts/2016-04-07-Thursday-Links.html
@@ -2,7 +2,7 @@
 title: Thursday Links
 layout: post
 description: "A longread from The Guardian on dietary science wars"
-ON: <2016-04-07 Thu>
+ON: <2016-04-07 Thu 11:30>
 show_meta: true
 comments: true
 mathjax: true
