--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@ layout: default
     </div>
     <br>
     <div class="postTitle">
-    <a class='postLink' href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
+      <!-- <a class='postLink' href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a> -->
+    <a class='postLink' href="">{{post.title}}</a>
     </div>
     <div class="postExt">
-   {{ post.content | strip_html | truncate:200}}
+   {{ post.content | strip_html | truncate:400}}
     </div>
   </div>
 
