--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     <br>
     <div class="postTitle">
       <!-- <a class='postLink' href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a> -->
-    <a class='postLink' href="/{{post.url}}">{{post.title}}</a>
+    <a class='postLink' href="{{post.url}}">{{post.title}}</a>
     </div>
     <div class="postExt">
    {{ post.content | strip_html | truncate:400}}
