Removes some posts, also leaving in html in preview

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <a class='postLink' href="{{post.url}}">{{post.title}}</a>
     </div>
     <div class="postExt">
-   {{ post.content | strip_html | truncate:400}}
+   {{ post.content | truncate:400}}
     </div>
   </div>
 
